--- a/assets/css/apps/mail/mail-index.css
+++ b/assets/css/apps/mail/mail-index.css
@@ -1,6 +1,6 @@
  .mail-index {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;         
   flex-direction: column; 
   overflow: hidden;
