--- a/assets/css/apps/mail/mail-new.css
+++ b/assets/css/apps/mail/mail-new.css
@@ -116,11 +116,11 @@
     bottom: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     margin: 0;
     border-radius: 0;
     box-shadow: none;
-    padding: 0;
+    padding-top: 0;
   }
 
   .mail-new .header {
